<resources>
    <string name="app_name">KeeperPlus</string>

    <string name="login">登录</string>
    <string name="passworderror">密码错误</string>
    <string name="loginsucceed">登录成功</string>
    <string name="loginfaild">登录失败</string>
    <string name="account">账号</string>
    <string name="inputphonenumber">请输入手机号</string>
    <string name="password">密码</string>
    <string name="inputpassword">请输入密码</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="register">注册</string>
    <string name="code">验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="userprotocol">阅读并接受《用户协议》</string>

    <string name="msg">我的消息</string>
    <string name="main">Keeper</string>
    <string name="me">个人中心</string>

    <string name="ecgmonitor">心电监测</string>
    <string name="ecgmonitorDescribe">连接设备后检测心电图</string>
    <string name="healthyRecord">健康档案</string>
    <string name="healthyRecordDescribe">记录历史心电测试记录</string>
    <string name="treatment_followup">诊后随访</string>
    <string name="treatment_followup_describe">出院后跟踪治疗</string>
    <string name="treatment_record">就诊记录</string>
    <string name="firstAid">一键急救</string>
    <string name="firstAidDescribe">紧急情况一键急救</string>
    <string name="ecgRecord">心电监测记录</string>
    <string name="anquanzhongxin">安全中心</string>
    <string name="guanyuwomen">关于我们</string>
    <string name="zhuxiaodenglu">注销登录</string>
    <string name="bangdingshouji">绑定手机</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="remendoctor">热门医生</string>

    <!--activity_ecg_patient -->
    <string name="connect">连接设备</string>
    <string name="startRecord">开始记录</string>
    <string name="chazhaojilu">查找记录</string>
    <string name="stopRecord">停止记录</string>
    <string name="not_connected">没有连接到设备</string>
    <string name="bt_not_enabled_leaving">蓝牙没有打开，退出程序中</string>
    <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">已连接到</string>
    <string name="title_not_connected">未连接</string>
    <string name="unable_connect">无法连接设备</string>
    <string name="lost_connection">连接丢失</string>
    <string name="select_device">选择需要连接的设备</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="none_found">没有发现设备</string>
    <string name="bluetooth_search">搜索蓝牙</string>
    <string name="disconnect">断开连接</string>
    <string name="not_support">该设备不支持蓝牙，强制退出</string>
    <string name="not_open">蓝牙没有打开，程序退出</string>

    <!--activity_device_list -->
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">其他可用设备</string>
    <string name="button_scan">查找设备</string>

    <!--activity_add_followup -->
    <string name="addTreatmentFollowup">添加随访记录</string>
    <string name="addTreatmentFollowupDestribe">输入检查结果后，点击提交按钮即可添加随访记录</string>
    <string name="rusuantuoqingmei">乳酸脱氢酶(iu/L)</string>
    <string name="gucaozhuananmei">谷草转氨酶(iu/L)</string>
    <string name="gubingzhuananmei">谷丙转氨酶(iu/L)</string>
    <string name="lingsuanjisuanjimei">磷酸肌酸激酶(iu/L)</string>
    <string name="lingsuanjisuanjimeitonggongmei">磷酸肌酸激酶同工酶(iu/L)</string>
    <string name="jihongdanbai">肌红蛋白(μg/L)</string>
    <string name="jigaidanbai">肌钙蛋白(μg/L)</string>
    <string name="waizhouxuebaixibaozongshu">外周血白细胞总数</string>
    <string name="zhongxinglixibaobilv">中性粒细胞比率</string>
    <string name="pleaseInputCheckResult">请输入检查结果</string>

</resources>
